# MLopsAssignment

./: .gitignore  DockerFile  Dockerfile  assign3.aux  check_data.py  check_threshold.py  data.dvc  download_model.py  main.py  present.tex  pyproject.toml  quickdraw_gan_studentA.ipynb  report_outline.tex  requirements.txt
.dvc/: config
.github/workflows/: assign5.yml  assign7.yml  cond.yml  ml-pipeline.yml
reports/: assign3.tex  yaml_bug_report_outline.aux  yaml_bug_report_outline.out  yaml_bug_report_outline.tex
