[project]
name = "assign01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.6.9",
    "dvc[s3]>=3.67.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "mlflow-custom-headers-plugin>=1.0.2",
    "numpy>=2.4.2",
    "tool>=0.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
